plugins {
    id 'java'
}

group 'FunctionProgramming'
version '1.0-FunctionProgramming'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testImplementation 'junit:junit:4.12'
}

test {
    useJUnit()
}
